--- a/Project/viroShield_App/templates/admin/dashboard.html
+++ b/Project/viroShield_App/templates/admin/dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,13 +13,13 @@
     <title>ViroShield - Dashboard</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'admin/vendor/fontawesome-free/css/all.css' %}" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="{% static 'admin/css/sb-admin-2.css' %}" rel="stylesheet">
 
 </head>
 
@@ -32,7 +33,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <img src="./img/logo.png" alt="" class="img-fluid" style="height:50px">
+                <img src="{% static 'admin/img/logo.png' %}" alt="" class="img-fluid" style="height:50px">
             </a>
 
             <!-- Divider -->
@@ -112,7 +113,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Muhammad</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/user1.png">
+                                    src="{% static 'admin/img/user1.png' %}">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -405,21 +406,21 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'admin/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'admin/vendor/bootstrap/js/bootstrap.bundle.js' %}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="{% static 'admin/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="{% static 'admin/js/sb-admin-2.js' %}"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="{% static 'admin/vendor/chart.js/Chart.js' %}"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="{% static 'admin/js/demo/chart-area-demo.js' %}"></script>
+    <script src="{% static 'admin/js/demo/chart-pie-demo.js' %}"></script>
 
 </body>
 
